--- a/promises/index.html
+++ b/promises/index.html
@@ -1,22 +1,26 @@
-<head>
-</head>
+<head> </head>
 <body>
-    <button>Click!</button>
-    
-    <script>
-    let counter = 0
+  <button>Click!</button>
 
-document.querySelector('button').addEventListener('click',()=>{
-    ++counter
-})
+  <script>
+    function startGame() {
+      let counter = 0;
 
-setTimeout(()=>{
-    if (counter>5){
-        alert('You won! Your Clicks '+counter)
-    }else{
-        alert('Sorry, you lost Your Clicks '+ counter)
+      document.querySelector('button').addEventListener('click', () => {
+        ++counter;
+      });
+      return new Promise((resolve, reject) => {
+        setTimeout(() => {
+          if (counter > 5) {
+            resolve();
+          } else {
+            reject();
+          }
+        }, 2000);
+      });
     }
-
-},2000)
-    </script>
+    startGame()
+      .then(() => alert('you win'))
+      .catch(() => alert('You lost'));
+  </script>
 </body>
